BAC-35: get updated cases time and count
